建立 userPlantUnit 服務，可以取得 API 回傳 JSON 字串

--- a/MySQL/SQCConsole/SQCConsole.csproj
+++ b/MySQL/SQCConsole/SQCConsole.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SQCLibrary\SQCLibrary.csproj">
+      <Project>{110cd0fd-a49c-4467-8a28-a6eae9e2c683}</Project>
+      <Name>SQCLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
